<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_margin_horizontal">

    <!-- Заголовок -->
    <TextView style="@style/TitleStyle"
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Email -->
    <TextView style="@style/AuthLabelStyle"
        android:id="@+id/emailLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/loginTitle"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText style="@style/AuthEditTextStyle"
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:paddingHorizontal="16dp"
        android:autofillHints="emailAddress"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/emailLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Пароль -->
    <TextView style="@style/AuthLabelStyle"
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/emailInput"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText style="@style/AuthEditTextStyle"
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="14dp"
        android:paddingHorizontal="16dp"
        android:autofillHints="password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Кнопка входа -->
    <androidx.appcompat.widget.AppCompatButton style="@style/GreenButtonStyle"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="10dp"
        android:text="@string/login"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Регистрация + Забыли пароль -->
    <LinearLayout
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/no_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/forgot_my_password"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/registerText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Линия -->
    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/stroke"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"/>

    <!-- Кнопки соцсетей -->
    <LinearLayout
        android:id="@+id/socialButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/vkButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button_vk"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_logo_vk"/>

        <Space android:layout_width="16dp" android:layout_height="0dp"/>

        <ImageButton
            android:id="@+id/okButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded_button_ok"
            android:paddingVertical="4dp"
            android:src="@drawable/ic_logo_ok"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
