<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_margin_horizontal"
    tools:context="courses.ui.CoursesFragment">

    <LinearLayout
        android:id="@+id/searchContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent" >

        <!-- Поисковое поле -->
        <EditText
            android:id="@+id/searchEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_search"
            android:paddingHorizontal="4dp"
            android:paddingVertical="4dp"
            android:hint="@string/hint_search"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textColorHint="@color/hint_search_gray"
            android:background="@drawable/bg_rounded_search_container_items"
            android:inputType="text"
            android:imeOptions="actionDone"/>

        <!-- Кнопка фильтра -->
        <ImageButton
            android:id="@+id/filterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="16dp"
            android:background="@drawable/bg_rounded_search_container_items"
            android:src="@drawable/ic_filter"
            android:contentDescription="@string/filter_description" />
    </LinearLayout>

    <!-- Sort button -->
    <TextView
        android:id="@+id/sortButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:drawableEndCompat="@drawable/ic_filter_arrows"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/by_date_added"
        android:textColor="@color/green"
        android:drawablePadding="4dp"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/searchContainer"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sortButton"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

    <!-- RecyclerView with courses -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="116dp"
        android:clipToPadding="false"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/sortButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
